[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ingrid = "0.1.0"
itertools = "0.10.3"
partition = "0.1.2"
regex = "1.5.4"
reqwest = {version = "0.11.7", features = ["blocking"]}
